Fixing sell link spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9946,8 +9946,8 @@ a.link:hover {
 }
 @media (min-width: 991px) and (max-width: 1200px) {
   #block-boxes-sell-links {
-    width: 223px;
-    margin-left: -10px;
+    width: 235px;
+    margin-left: -23px;
   }
 }
 .ribbon {
