--- a/less/frontpage.less
+++ b/less/frontpage.less
@@ -606,7 +606,7 @@ a.link:hover {
 
 @media (min-width: 991px) and (max-width: 1200px){
     #block-boxes-sell-links{
-        width: 223px;
-        margin-left: -10px;
+    width: 235px;
+    margin-left: -23px;
     }
 }
